fixed some layout issue

--- a/KnowWE/KnowWE-Plugin-CI4KE/src/main/resources/webapp/KnowWEExtension/css/CI4KE.css
+++ b/KnowWE/KnowWE-Plugin-CI4KE/src/main/resources/webapp/KnowWEExtension/css/CI4KE.css
@@ -25,7 +25,7 @@
 	float: left; 
 	min-height: 100%;
 	border-right: 1px solid #DDD;
-	margin-top: 14px;
+	margin-top: 10px;
 	padding-right: 10px;
 	/* width: 24%; */
 	}
@@ -34,7 +34,7 @@
 	float: left; 
 	border-left: 1px solid #DDD;
 	margin-left: 100px;	
-	margin-top: 6px;
+	margin-top: 10px;
 	padding-left: 10px;
 	/* width: 75%; */
 	}
